sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:12: error: not found: value O
    i = O
        ^